Fix tap target spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -325,7 +325,8 @@ code {
 }
 
 .filter {
-  padding-top: 10px;
+  padding-top: 15px;
+  padding-bottom: 5px;
 }
 
 .filter:hover {
